# sais

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  fnt7x8.pcx
demo/: manual.txt
demo/gamedata/: cards.ini  hulls.ini  items.ini  jobs.ini  names.ini  planets.ini  races.ini  ships.ini  strings.ini  systems.ini  weapons.ini
full/: manual.txt  mods.txt
full/gamedata/: cards.ini  fleets.ini  hulls.ini  items.ini  jobs.ini  planets.ini  races.ini  ships.ini  strings.ini  systems.ini  weapons.ini
full/mods/eelfarm/gamedata/: cards.ini  items.ini
full/mods/flakgun/gamedata/: cards.ini  items.ini  ships.ini  systems.ini  weapons.ini
src/: cards.cpp  cifm.cpp  cifm.h  combat.cpp  gfx.cpp  gfx.h  interface.cpp  interface.h  is_fileio.cpp  main.cpp  modconfig.cpp  sdl_gfx.cpp  sdl_iface.cpp  sdl_main.cpp  sdl_sound.cpp  sprites.cpp  starmap_inventory.cpp  typedefs.h  w32_gfx.cpp
